# calculo_numerico

./: README.md  algo1.py  algo5.py  lu_pivotamento_parcial.py  metodo_jacobi.py  metodo_seidel.py  pyproject.toml  test.py
