[tool.poetry]
name = "calculo_numerico"
version = "0.1.0"
description = ""
authors = ["caiolul <caiolucena.il@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.12b0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
